# hunterclaw

./: .gitignore  AGENTS.md  GBRAIN.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  README.md  SOUL.md  TOOLS.md  USER.md  ai-self-evolution.md  coze_agent.py  coze_fin.py  coze_hunt.py  glm_helper.py  hunter_closed_loop.py  hunter_closed_loop_v2.py  test_v2.py  trade_state.json  交易策略.md  对agnet猎手的建议20260514.md  持仓.json  持仓报告.md  持仓监控说明.md
.clawhub/: lock.json
.learnings/: force_memory_sync.sh  hunter_daily_learn.py  memory_maintenance.py  self_diagnostic.py  tech_intel_scan.sh  tech_research_scan.py
.openclaw/: workspace-state.json
config/: mcporter.json  nginx_aialter
data/: evolution_state.json  portfolio.json  stock_pool.json  trade_state.json
docs/: API开发文档.md  MCP工具文档.md  architecture.md  verify_v4.py  交易规则变更日志.md  优化总结_v2.md  猎手系统v4.0技术文档.md  猎手系统v5.0技术文档.md
evo-trader/: run_backtest.py  run_evolve.sh
glm_outputs/: strategy_descriptions_3.json
hunter/: scan_morning.sh
learnings/: AI前沿-20260424.md  AI前沿深度学习-20260424.md  hermes_memory_rules.md  ima-learner-v2.sh  ima-learner.sh  sync-memory.sh  资金博弈-20260429.md
mcp-data-server/: README.md  requirements.txt
memory/: 2026-04-11.md  2026-04-12.md  2026-04-13.md  2026-04-15.md  2026-04-16.md  2026-04-20.md  2026-04-21.md  2026-04-22-lessons.md  2026-04-22.md  2026-04-30.md  2026-05-01.md  2026-05-06.md
pending-summaries/: evolution-report-2026-04-30-1937.md  stock-monitor-2026-04-30.md
猎手模拟交易/mcp-data-server/: pyproject.toml
猎手模拟交易/mcp-data-server/src/: cache_manager.py  data_service.py  main.py
(+355 files in other folders)
