[project]
name = "mcp-data-server"
version = "1.0.0"
description = "A股数据统一接口 MCP Server"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.18.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
    "requests>=2.31.0",
]

[project.scripts]
mcp-data-server = "src.main:run_stdio_server"
mcp-data-api = "uvicorn src.api_server:app --host 0.0.0.0 --port 8766"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
